fixing credits link contrast ratio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,7 +188,7 @@ color: #B34700;
 
 /**link to my github in built by**/
 .credits{
-    color: #A3A3A3;
+    color: #ADADAD;
     text-decoration: none;
 }
 
